--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "jquery": "^3.2.1",
     "ng2-toastr": "^4.1.2",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "0.8.12"
   },
   "devDependencies": {
     "@angular/cli": "1.2.1",
@@ -42,7 +42,7 @@
     "karma": "~1.7.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-firefox-launcher": "^1.0.1",
+    "karma-chrome-launcher": "^1.0.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
